@@ -1,28 +1,24 @@
 package ru.yandex.practicum.filmorate.repository;
 
-import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.time.LocalDate;
-import java.util.Collection;
-import java.util.List;
-import java.util.Optional;
-import lombok.extern.slf4j.Slf4j;
+import java.util.*;
+
 import org.springframework.context.annotation.Primary;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.ResultSetExtractor;
 import org.springframework.stereotype.Repository;
 import org.springframework.util.CollectionUtils;
+import ru.yandex.practicum.filmorate.model.Director;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.model.Genre;
 
-@Slf4j
 @Repository
 @Primary
 @SuppressWarnings("unused")
 public class DbFilmStorage extends DbBaseStorage<Film> implements FilmStorage {
 
-    private static final String CHECK_EXISTS_QUERY =
-            "SELECT EXISTS (SELECT 1 FROM films WHERE film_id = ?)";
+    private static final String CHECK_EXISTS_QUERY = """
+            SELECT EXISTS (SELECT 1 FROM films WHERE film_id = ?)
+            """;
 
     private static final String GET_ALL_QUERY = """
         SELECT f.film_id,
@@ -33,11 +29,15 @@ public class DbFilmStorage extends DbBaseStorage<Film> implements FilmStorage {
                m.mpa_id,
                m.name AS mpa_name,
                g.genre_id,
-               g.name AS genre_name
+               g.name AS genre_name,
+               d.director_id,
+               d.name AS director_name
         FROM films f
         LEFT JOIN mpa_ratings m ON f.mpa_rating_id = m.mpa_id
         LEFT JOIN film_genres fg ON f.film_id = fg.film_id
         LEFT JOIN genres g ON fg.genre_id = g.genre_id
+        LEFT JOIN film_directors fd ON f.film_id = fd.film_id
+        LEFT JOIN directors d ON fd.director_id = d.director_id
         ORDER BY f.film_id, g.genre_id
         """;
 
@@ -50,11 +50,15 @@ public class DbFilmStorage extends DbBaseStorage<Film> implements FilmStorage {
                m.mpa_id,
                m.name AS mpa_name,
                g.genre_id,
-               g.name AS genre_name
+               g.name AS genre_name,
+               d.director_id,
+               d.name AS director_name
         FROM films f
         LEFT JOIN mpa_ratings m ON f.mpa_rating_id = m.mpa_id
         LEFT JOIN film_genres fg ON f.film_id = fg.film_id
         LEFT JOIN genres g ON fg.genre_id = g.genre_id
+        LEFT JOIN film_directors fd ON f.film_id = fd.film_id
+        LEFT JOIN directors d ON fd.director_id = d.director_id
         WHERE f.film_id = ?
         """;
 
@@ -73,7 +77,9 @@ public class DbFilmStorage extends DbBaseStorage<Film> implements FilmStorage {
          WHERE film_id = ?
         """;
 
-    private static final String DELETE_QUERY = "DELETE FROM films WHERE film_id = ?";
+    private static final String DELETE_QUERY = """
+        DELETE FROM films WHERE film_id = ?
+        """;
 
     private static final String ADD_GENRE_QUERY = """
         INSERT INTO film_genres (film_id, genre_id)
@@ -110,6 +116,71 @@ public class DbFilmStorage extends DbBaseStorage<Film> implements FilmStorage {
         ORDER BY like_count DESC, f.film_id
         """;
 
+    private static final String ADD_DIRECTORS_QUERY = """
+        INSERT INTO film_directors (film_id, director_id)
+        VALUES (?, ?)
+        """;
+
+    private static final String GET_BY_DIRECTOR_ID_LIKES_QUERY = """
+        WITH film_likes AS (
+          SELECT
+            film_id,
+            COUNT(film_id) AS likes_count
+          FROM likes
+          GROUP BY film_id
+        )
+        SELECT
+          f.film_id,
+          f.name AS film_name,
+          f.description,
+          f.release_date,
+          f.duration,
+          m.mpa_id,
+          m.name AS mpa_name,
+          g.genre_id,
+          g.name AS genre_name,
+          d.director_id,
+          d.name AS director_name,
+          film_likes.likes_count
+        FROM films f
+        JOIN mpa_ratings m ON f.mpa_rating_id = m.mpa_id
+        LEFT JOIN film_genres fg ON f.film_id = fg.film_id
+        LEFT JOIN genres g ON fg.genre_id = g.genre_id
+        LEFT JOIN film_likes ON f.film_id = film_likes.film_id
+        LEFT JOIN film_directors fd ON f.film_id = fd.film_id
+        LEFT JOIN directors d ON fd.director_id = d.director_id
+        WHERE d.director_id = ?
+        ORDER BY
+          film_likes.likes_count DESC,
+          f.film_id,
+          g.genre_id
+        """;
+
+    private static final String GET_BY_DIRECTOR_ID_YEAR_QUERY = """
+        SELECT
+          f.film_id,
+          f.name AS film_name,
+          f.description,
+          f.release_date,
+          f.duration,
+          m.mpa_id,
+          m.name AS mpa_name,
+          g.genre_id,
+          g.name AS genre_name,
+          d.director_id,
+          d.name AS director_name
+        FROM films f
+        LEFT JOIN mpa_ratings m ON f.mpa_rating_id = m.mpa_id
+        LEFT JOIN film_genres fg ON f.film_id = fg.film_id
+        LEFT JOIN genres g ON fg.genre_id = g.genre_id
+        LEFT JOIN film_directors fd ON f.film_id = fd.film_id
+        LEFT JOIN directors d ON fd.director_id = d.director_id
+        WHERE d.director_id = ?
+        ORDER BY
+          f.release_date,
+          f.film_id DESC
+        """;
+
     private final ResultSetExtractor<List<Film>> extractor;
 
     public DbFilmStorage(JdbcTemplate jdbc, ResultSetExtractor<List<Film>> extractor) {
@@ -125,9 +196,8 @@ public class DbFilmStorage extends DbBaseStorage<Film> implements FilmStorage {
     @Override
     public Optional<Film> getFilmById(long filmId) {
         List<Film> resultList = jdbc.query(GET_BY_ID_QUERY, extractor, filmId);
-        return CollectionUtils.isEmpty(resultList)
-                ? Optional.empty()
-                : Optional.of(resultList.get(0));
+        return CollectionUtils.isEmpty(resultList) ? Optional.empty()
+            : Optional.of(resultList.getFirst());
     }
 
     @Override
@@ -141,6 +211,11 @@ public class DbFilmStorage extends DbBaseStorage<Film> implements FilmStorage {
         if (film.getGenres() != null) {
             for (Genre genre : film.getGenres()) {
                 jdbc.update(ADD_GENRE_QUERY, assignedId, genre.getId());
+            }
+        }
+        if (film.getDirector() != null) {
+            for (Director director : film.getDirector()) {
+                jdbc.update(ADD_DIRECTORS_QUERY, assignedId, director.getId());
             }
         }
         return assignedId;
@@ -161,11 +236,26 @@ public class DbFilmStorage extends DbBaseStorage<Film> implements FilmStorage {
                 jdbc.update(ADD_GENRE_QUERY, film.getId(), genre.getId());
             }
         }
+        if (film.getDirector() != null) {
+            for (Director director : film.getDirector()) {
+                jdbc.update(ADD_DIRECTORS_QUERY, film.getId(), director.getId());
+            }
+        }
     }
 
     @Override
     public Collection<Film> getAllFilms() {
         return jdbc.query(GET_ALL_QUERY, extractor);
+    }
+
+    @Override
+    public Collection<Film> getDirectorFilmsBylikes(long directorId, Set<String> params) {
+        Collection<Film> resultList = List.of();
+        if (params.contains("likes"))
+            return jdbc.query(GET_BY_DIRECTOR_ID_LIKES_QUERY, extractor, directorId);
+        else if (params.contains("year"))
+            return jdbc.query(GET_BY_DIRECTOR_ID_YEAR_QUERY, extractor, directorId);
+        return resultList;
     }
 
     @Override
@@ -176,14 +266,5 @@ public class DbFilmStorage extends DbBaseStorage<Film> implements FilmStorage {
     @Override
     public Collection<Film> getCommonFilms(long userId, long friendId) {
         return jdbc.query(GET_COMMON_FILMS_QUERY, extractor, userId, friendId);
-    }
-
-    private LocalDate safeGetLocalDate(ResultSet rs, String columnName) {
-        try {
-            java.sql.Date date = rs.getDate(columnName);
-            return date != null ? date.toLocalDate() : null;
-        } catch (SQLException e) {
-            throw new RuntimeException("Error reading LocalDate column '" + columnName + "': " + e.getMessage(), e);
-        }
     }
 }
